// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toggle should have all props set correctly 1`] = `
<div
  aria-hidden={false}
  className="toggle"
>
  <AnimateHeight
    animateOpacity={false}
    animationStateClasses={
      Object {
        "animating": "rah-animating",
        "animatingDown": "rah-animating--down",
        "animatingToHeightAuto": "rah-animating--to-height-auto",
        "animatingToHeightSpecific": "rah-animating--to-height-specific",
        "animatingToHeightZero": "rah-animating--to-height-zero",
        "animatingUp": "rah-animating--up",
        "static": "rah-static",
        "staticHeightAuto": "rah-static--height-auto",
        "staticHeightSpecific": "rah-static--height-specific",
        "staticHeightZero": "rah-static--height-zero",
      }
    }
    applyInlineTransitions={true}
    delay={0}
    duration={250}
    easing="ease"
    height="auto"
    style={Object {}}
  >
    All props
  </AnimateHeight>
</div>
`;

exports[`Toggle should render a default toggle 1`] = `
<div
  aria-hidden="true"
  class="toggle"
/>
`;

exports[`Toggle should render an animated toggle 1`] = `
<div
  aria-hidden="true"
  class="toggle"
>
  <div
    aria-hidden="true"
    class="rah-static rah-static--height-zero"
    style="height:0;overflow:hidden"
  >
    <div>
      Test
    </div>
  </div>
</div>
`;

exports[`Toggle should render an open toggle 1`] = `
<div
  aria-hidden="false"
  class="toggle"
>
  Test
</div>
`;
